# sky_board_zephyr_demo

./: .clang-format  .clangd  .gitattributes  .gitignore  .markdownlint.json  CMakeLists.txt  Kconfig  OPENSPEC_使用指南.md  README.rst  Zephyr大型项目架构快速上手指南.md  package-lock.json  package.json  prj.conf  sample.yaml
app/: app_Init.cpp  main.cpp
boards/: lckfb_sky_board_stm32f407.overlay
boards/st/lckfb_sky_board_stm32f407/: Kconfig.board  Kconfig.defconfig  ST7789显示接入方案.md  board.yml  lckfb_sky_board_stm32f407.dts  lckfb_sky_board_stm32f407.yaml  lckfb_sky_board_stm32f407_defconfig
docs/: TCP获取北京时间方案.md  codex-runbook.md  cpp-comment-standard.md  mcuboot-bootloader-guide.md  skill-call-templates-general.md  skill-call-templates-zephyr.md  ws2812-issue-report.md  传感器接入指南.md  构建脚本使用说明.md
docs/plans/: 2026-02-22-sdio-fatfs-design.md  2026-02-23-ina226-aht20-design.md  2026-02-23-sdio-fatfs-implementation-plan.md  2026-02-24-ws2812-tim5-dma-implementation-plan.md  2026-03-01-active-buzzer-pa6-design.md  2026-03-01-active-buzzer-pa6-implementation-plan.md  2026-03-02-active-buzzer-driver-design.md  2026-03-02-active-buzzer-driver-implementation-plan.md
dts/bindings/: vendor-prefixes.txt
dts/bindings/led/: lckfb,ws2812-tim5-dma.yaml
include/app/: app_Init.hpp
include/platform/: font5x7.hpp  ibacklight.hpp  idisplay.hpp  ilogger.hpp  platform_backlight.hpp  platform_boot_counter.hpp  platform_button.hpp  platform_buzzer.hpp  platform_display.hpp  platform_encoder.hpp  platform_ethernet.hpp  platform_ext_eeprom.hpp  platform_imu.hpp  platform_logger.hpp  platform_pca9555.hpp  platform_rtc.hpp  platform_sensors.hpp  platform_spi_flash.hpp  platform_storage.hpp  platform_ws2812.hpp
include/servers/: button_service.hpp  encoder_service.hpp  hello_service.hpp  imu_service.hpp  sdcard_service.hpp  sensor_service.hpp  tcp_service.hpp  time_service.hpp
openspec/changes/add-buzzer-driver-pa6-timer/: tasks.md
openspec/changes/archive/2026-03-02-add-pca9555pw-118-driver-0x20-dipsw-led/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-02-add-pca9555pw-118-driver-0x20-dipsw-led/specs/pca9555-io-expander/: spec.md
openspec/changes/archive/2026-03-03-add-buzzer-driver-pa6-timer/: design.md  proposal.md
openspec/changes/archive/2026-03-03-add-buzzer-driver-pa6-timer/specs/buzzer-driver/: spec.md
openspec/specs/buzzer-driver/: spec.md
openspec/specs/pca9555-io-expander/: spec.md
scripts/: build.ps1  build.sh
subsys/platform/: font5x7.cpp  zephyr_backlight.cpp  zephyr_boot_counter.cpp  zephyr_button.cpp  zephyr_buzzer.cpp  zephyr_display.cpp  zephyr_encoder.cpp  zephyr_ethernet.cpp  zephyr_ext_eeprom.cpp  zephyr_imu.cpp  zephyr_logger.cpp  zephyr_pca9555.cpp  zephyr_rtc.cpp  zephyr_sensors.cpp  zephyr_spi_flash.cpp  zephyr_storage.cpp  zephyr_ws2812.cpp
subsys/servers/: button_service.cpp  encoder_service.cpp  hello_service.cpp  imu_service.cpp  sdcard_service.cpp  sensor_service.cpp  tcp_service.cpp  time_service.cpp
